[gd_scene load_steps=31 format=3 uid="uid://btmg2iibphdkj"]

[ext_resource type="Script" path="res://level_3/chameleon.gd" id="1_75n1h"]
[ext_resource type="Texture2D" uid="uid://bcme781mibf6d" path="res://assets/Enemy/Level 3/Chameleon/Attack (84x38).png" id="1_ao1xn"]
[ext_resource type="Texture2D" uid="uid://csa2exi8m3gvx" path="res://assets/Enemy/Level 3/Chameleon/Hit (84x38).png" id="2_bygle"]
[ext_resource type="Texture2D" uid="uid://bg5c7btcpqbbu" path="res://assets/Enemy/Level 3/Chameleon/Run (84x38).png" id="3_t6dm2"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_4ariq"]
radius = 17.0
height = 36.0

[sub_resource type="AtlasTexture" id="AtlasTexture_kodc2"]
atlas = ExtResource("1_ao1xn")
region = Rect2(0, 0, 126, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_lbdof"]
atlas = ExtResource("1_ao1xn")
region = Rect2(126, 0, 126, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_1jk7l"]
atlas = ExtResource("1_ao1xn")
region = Rect2(252, 0, 126, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ud6o"]
atlas = ExtResource("1_ao1xn")
region = Rect2(378, 0, 126, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_y68fg"]
atlas = ExtResource("1_ao1xn")
region = Rect2(504, 0, 126, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_h31pm"]
atlas = ExtResource("1_ao1xn")
region = Rect2(630, 0, 126, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_svohc"]
atlas = ExtResource("1_ao1xn")
region = Rect2(756, 0, 126, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_cr55i"]
atlas = ExtResource("1_ao1xn")
region = Rect2(882, 0, 126, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_nn3ic"]
atlas = ExtResource("1_ao1xn")
region = Rect2(1008, 0, 126, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_0bhv5"]
atlas = ExtResource("1_ao1xn")
region = Rect2(1134, 0, 126, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_6cifu"]
atlas = ExtResource("2_bygle")
region = Rect2(0, 0, 84, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_2bip6"]
atlas = ExtResource("2_bygle")
region = Rect2(168, 0, 84, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_j50kb"]
atlas = ExtResource("3_t6dm2")
region = Rect2(0, 0, 84, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_bn3od"]
atlas = ExtResource("3_t6dm2")
region = Rect2(84, 0, 84, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_1j8u0"]
atlas = ExtResource("3_t6dm2")
region = Rect2(168, 0, 84, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_6qtiv"]
atlas = ExtResource("3_t6dm2")
region = Rect2(252, 0, 84, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_qki3i"]
atlas = ExtResource("3_t6dm2")
region = Rect2(336, 0, 84, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_a0kf4"]
atlas = ExtResource("3_t6dm2")
region = Rect2(420, 0, 84, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_lqub0"]
atlas = ExtResource("3_t6dm2")
region = Rect2(504, 0, 84, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_3fxn3"]
atlas = ExtResource("3_t6dm2")
region = Rect2(588, 0, 84, 38)

[sub_resource type="SpriteFrames" id="SpriteFrames_ajjkl"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kodc2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lbdof")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1jk7l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ud6o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y68fg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h31pm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_svohc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cr55i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nn3ic")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0bhv5")
}],
"loop": false,
"name": &"attack",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6cifu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2bip6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6cifu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2bip6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6cifu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2bip6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6cifu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2bip6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6cifu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2bip6")
}],
"loop": false,
"name": &"hurt",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_j50kb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bn3od")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1j8u0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6qtiv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qki3i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a0kf4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lqub0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3fxn3")
}],
"loop": true,
"name": &"run",
"speed": 15.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_y00f8"]
radius = 17.0
height = 38.0

[sub_resource type="CircleShape2D" id="CircleShape2D_ghr2g"]
radius = 3.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_sj1ak"]
radius = 17.0
height = 36.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_1aaqg"]
radius = 8.0
height = 42.0

[node name="Chameleon" type="CharacterBody2D"]
script = ExtResource("1_75n1h")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_4ariq")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-1, -1)
sprite_frames = SubResource("SpriteFrames_ajjkl")
animation = &"run"

[node name="HitBox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
shape = SubResource("CapsuleShape2D_y00f8")

[node name="Left" type="CollisionShape2D" parent="HitBox"]
position = Vector2(-61, 6)
shape = SubResource("CircleShape2D_ghr2g")
disabled = true

[node name="Right" type="CollisionShape2D" parent="HitBox"]
position = Vector2(61, 6)
shape = SubResource("CircleShape2D_ghr2g")
disabled = true

[node name="HurtBox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
shape = SubResource("CapsuleShape2D_sj1ak")

[node name="RayCast2D" type="RayCast2D" parent="."]
target_position = Vector2(0, 64)

[node name="Sight" type="Area2D" parent="."]

[node name="Left" type="CollisionShape2D" parent="Sight"]
position = Vector2(-40, 0)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_1aaqg")

[node name="Right" type="CollisionShape2D" parent="Sight"]
position = Vector2(40, 0)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_1aaqg")
disabled = true

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="frame_changed" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_frame_changed"]
[connection signal="area_entered" from="HurtBox" to="." method="_on_hurt_box_area_entered"]
[connection signal="body_entered" from="Sight" to="." method="_on_sight_body_entered"]
[connection signal="body_exited" from="Sight" to="." method="_on_sight_body_exited"]
